# longcontext-v4-lab

./: .gitignore  LongContext_V4_Lab_任务书.md  README.md  pyproject.toml
configs/: data_sources.yaml  data_sources_smoke.yaml  debug_120m_full.yaml  main_350m_csa.yaml  main_350m_full.yaml  main_350m_hca.yaml  main_350m_hybrid.yaml  main_350m_hybrid_mhc.yaml  main_350m_hybrid_mhc_muon.yaml  main_350m_swa.yaml
data/: __init__.py  dataset.py  pack_dataset.py  prepare_corpus.py  split_validation.py  tokenize_corpus.py  train_tokenizer.py
data/metadata/smoke/: accepted_samples_smoke.jsonl  split_stats.json  train_docs.jsonl  (+3 more)
longcontext/: __init__.py
longcontext/eval/: common.py  eval_kv_cache.py  eval_needle.py  eval_passkey.py  eval_ppl.py  eval_speed.py
longcontext/model/: __init__.py  attention_csa.py  attention_full.py  attention_hca.py  attention_hybrid.py  attention_swa.py  attention_utils.py  block.py  config.py  ffn.py  kv_cache.py  mhc.py  rmsnorm.py  rope.py  transformer.py
longcontext/optim/: __init__.py  build_optimizer.py  muon.py
longcontext/train/: __init__.py  checkpoint.py  pretrain.py  scheduler.py  trainer.py
longcontext/utils/: logging.py  profiler.py  seed.py
reports/: ablation.md  design.md  eval_summary.md  experiment_log.md  memory_profile.md  resume_summary.md
scripts/: eval_all.sh  profile_all.sh  run_debug.sh  run_main_full.sh  run_main_hybrid.sh
tests/: test_attention_contracts.py  test_checkpoint.py  test_config_contracts.py  test_data_pack.py  test_mhc_muon.py  test_model_smoke.py  test_optimizer_groups.py  test_trainer.py
