[project]
name = "longcontext-v4-lab"
version = "0.1.0"
description = "DeepSeek-V4 inspired long-context language model lab with CSA/HCA hybrid attention."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "tokenizers",
  "safetensors",
  "numpy",
  "tqdm",
  "pyyaml",
  "einops",
  "matplotlib",
  "pandas",
  "zstandard",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
